[gd_scene load_steps=7 format=3 uid="uid://b0y2h3ijkcs67"]

[ext_resource type="Script" uid="uid://ds7umwcdiomj6" path="res://UI Pages/settings_handler.gd" id="1_h8v2w"]

[sub_resource type="FontVariation" id="FontVariation_r17oi"]
variation_embolden = -0.69
variation_transform = Transform2D(1.1, 0, 0, 1, 1, 0)

[sub_resource type="Theme" id="Theme_wvqr3"]
default_font = SubResource("FontVariation_r17oi")
default_font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_1cdp3"]
font_size = 48
font_color = Color(0.810721, 1, 0.663298, 1)
outline_size = 3
outline_color = Color(0.345098, 0.505882, 0.341176, 1)

[sub_resource type="FontVariation" id="FontVariation_h8v2w"]

[sub_resource type="LabelSettings" id="LabelSettings_r17oi"]
font = SubResource("FontVariation_h8v2w")

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h8v2w")

[node name="BackgroundColor" type="ColorRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.140968, 0.422588, 0.279372, 1)

[node name="SettingsMenu" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1220, 804)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -610.0
offset_top = -402.0
offset_right = 610.0
offset_bottom = 402.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabel" type="Label" parent="SettingsMenu"]
texture_filter = 1
custom_minimum_size = Vector2(0, 79)
layout_direction = 4
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_wvqr3")
theme_type_variation = &"HeaderLarge"
theme_override_constants/paragraph_spacing = 16
theme_override_font_sizes/font_size = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_1cdp3")
horizontal_alignment = 1
vertical_alignment = 1
structured_text_bidi_override = 5

[node name="HSeparator" type="HSeparator" parent="SettingsMenu"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="SelectorPanel" type="Panel" parent="SettingsMenu/HBoxContainer"]
custom_minimum_size = Vector2(150, 450)
layout_mode = 2

[node name="Selector" type="VBoxContainer" parent="SettingsMenu/HBoxContainer/SelectorPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="HSeparator" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Controls" type="Button" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Controls"

[node name="KeyMappings" type="Button" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Key-Mappings"

[node name="Audio" type="Button" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Audio"

[node name="Video" type="Button" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Video"

[node name="Graphics" type="Button" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Graphics"

[node name="SaveSettings" type="Button" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
layout_mode = 2
size_flags_vertical = 10
disabled = true
text = "Save Settings"

[node name="ToTitle" type="Button" parent="SettingsMenu/HBoxContainer/SelectorPanel/Selector"]
layout_mode = 2
size_flags_vertical = 8
text = "Return to Menu"

[node name="SettingsSections" type="Panel" parent="SettingsMenu/HBoxContainer"]
custom_minimum_size = Vector2(650, 450)
layout_mode = 2
size_flags_horizontal = 3

[node name="Controls" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Options" type="ScrollContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="O" type="VBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="GamePadDeadZone" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls/Options/O"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls/Options/O/GamePadDeadZone"]
layout_mode = 2
text = "Deadzone"
label_settings = SubResource("LabelSettings_r17oi")

[node name="Value" type="TextEdit" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls/Options/O/GamePadDeadZone"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10

[node name="Bottom" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Right" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Controls"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="KeyMappings" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Options" type="ScrollContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="O" type="VBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="TBC" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings/Options/O"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings/Options/O/TBC"]
layout_mode = 2
size_flags_horizontal = 0
text = "TBC
"

[node name="Value" type="Node" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings/Options/O/TBC"]

[node name="Bottom" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Right" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/KeyMappings"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Audio" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Options" type="ScrollContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="O" type="VBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio/Options/O"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio/Options/O/MasterVolume"]
layout_mode = 2
text = "Master Volume"

[node name="Value" type="HScrollBar" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio/Options/O/MasterVolume"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10

[node name="Bottom" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio/Options/O"]
layout_mode = 2

[node name="Right" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Audio"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Video" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Video"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Options" type="ScrollContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Video"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="O" type="VBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Video/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Video/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="TBC" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Video/Options/O"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Video/Options/O/TBC"]
layout_mode = 2
text = "TBC"

[node name="Value" type="Node" parent="SettingsMenu/HBoxContainer/SettingsSections/Video/Options/O/TBC"]

[node name="Bottom" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Video/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Right" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Video"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Graphics" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Options" type="ScrollContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="O" type="VBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="DisplayMode" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/DisplayMode"]
layout_mode = 2
text = "Display Mode"

[node name="Value" type="OptionButton" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/DisplayMode"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10

[node name="VSyncToggle" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/VSyncToggle"]
layout_mode = 2
text = "V-Sync Enabled"

[node name="Value" type="CheckButton" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/VSyncToggle"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10

[node name="FPSCapToggle" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/FPSCapToggle"]
layout_mode = 2
text = "FPS Cap"

[node name="Value" type="CheckButton" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/FPSCapToggle"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10

[node name="FPSLimit" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/FPSLimit"]
layout_mode = 2
text = "FPS Limit"

[node name="Value" type="SpinBox" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/FPSLimit"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10
max_value = 240.0
value = 60.0
suffix = " FPS"
custom_arrow_step = 1.0

[node name="ShadowsToggle" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/ShadowsToggle"]
layout_mode = 2
text = "Enable Shadows"

[node name="Value" type="CheckButton" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/ShadowsToggle"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10

[node name="DisplayPerformanceStats" type="HBoxContainer" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/DisplayPerformanceStats"]
layout_mode = 2
text = "Display Performance"

[node name="Value" type="CheckButton" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O/DisplayPerformanceStats"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
size_flags_horizontal = 10
keep_pressed_outside = true

[node name="Bottom" type="HSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics/Options/O"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="Right" type="VSeparator" parent="SettingsMenu/HBoxContainer/SettingsSections/Graphics"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
